Fiz issues with margins on mobile that lose some space

--- a/assets/scss/modules/_general.scss
+++ b/assets/scss/modules/_general.scss
@@ -9,8 +9,12 @@ section{
 }
 
 .row{
-  margin-left:0;
-  margin-right: 0;
+  margin-left: -.9375rem;
+  margin-right: -.9375rem;
+  @include small{
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .show{
