--- a/assets/scss/pages/_work.scss
+++ b/assets/scss/pages/_work.scss
@@ -183,7 +183,7 @@
     }
     img{
       margin-top: 2.4em;
-      margin-right: -1.3em;
+      margin-right: .7em;
       margin-left: 0;
       height: 26%;
       width: 42%;
